# real_time_job

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  k8s-deployment.example.yaml  pyproject.toml  requirements.txt
k8s/: kafka-consumer-code-pvc.yaml  kafka-consumer-deployment.yaml  kafka-consumer-log-pvc.yaml
model-stearming-code-pvc/: TODO.md
model-stearming-code-pvc/code/common/: __init__.py  base.py  config.py  consumer.py  data_handle_after.py  state.py
model-stearming-code-pvc/code/model_scenarios/SK0002/: contact_policy.py  data_handle_after.py  data_handle_before.py  processing.py
model-stearming-code-pvc/code/model_scenarios/SK0002/k8s/: model-stearming-SK0002-deployment.yaml
model-stearming-code-pvc/code/model_scenarios/SL0001/: contact_policy.py  data_handle_after.py  data_handle_before.py  processing.py
model-stearming-code-pvc/code/model_scenarios/SL0001/k8s/: kafka-consumer-deployment.yaml  kafka-consumer-rocksdb-state-pvc.yaml  model-stearming-SL0001-deployment.yaml
model-stearming-code-pvc/code/service/: app.py
model-stearming-code-pvc/k8s/: model-stearming-code-pvc.yaml  model-stearming-log-pvc.yaml  model-stearming-rocksdb-state-pvc.yaml
src/checkpoint_consumer/: __init__.py  app.py  config.py  consumer.py  processing.py
